test output is now per test for lua, perl and python3

--- a/lua53/fannkuch-redux/Makefile
+++ b/lua53/fannkuch-redux/Makefile
@@ -2,7 +2,7 @@ compile:
 	echo "lua53: nothing to do"
 
 run:
-	${BINARY} fannkuchredux.lua 12 >> /opt/results/${TLANG}.txt
+	${BINARY} fannkuchredux.lua 12 > /opt/results/${TEST_NAME}.${TLANG}.txt
 
 measure:
 	/usr/bin/time -o /opt/measures/${TLANG}.txt -v ${BINARY} fannkuchredux.lua 12
