--- a/lua53/regex-redux/Makefile
+++ b/lua53/regex-redux/Makefile
@@ -2,7 +2,7 @@ compile:
 	echo "lua53: nothing to do"
 
 run:
-	${BINARY} regexredux.lua-2.lua 0 < ../../regexredux-input50000.txt >> /opt/results/${TLANG}.txt
+	${BINARY} regexredux.lua-2.lua 0 < ../../regexredux-input50000.txt > /opt/results/${TEST_NAME}.${TLANG}.txt
 
 measure:
 	/usr/bin/time -o /opt/measures/${TLANG}.txt -v ${BINARY} regexredux.lua-2.lua 0 < ../../regexredux-input50000.txt
