--- a/lua53/spectral-norm/Makefile
+++ b/lua53/spectral-norm/Makefile
@@ -2,7 +2,7 @@ compile:
 	echo "lua53: nothing to do"
 
 run:
-	${BINARY} spectralnorm.lua 5500 >> /opt/results/${TLANG}.txt
+	${BINARY} spectralnorm.lua 5500 > /opt/results/${TEST_NAME}.${TLANG}.txt
 
 measure:
 	/usr/bin/time -o /opt/measures/${TLANG}.txt -v ${BINARY} spectralnorm.lua 5500
