--- a/luajit/reverse-complement/Makefile
+++ b/luajit/reverse-complement/Makefile
@@ -2,7 +2,7 @@ compile:
 	echo "luajit: nothing to do"
 
 run:
-	${BINARY} revcomp.lua-2.lua 0 < /root/data/revcomp-input25000000.txt >> /opt/results/${TLANG}.txt
+	${BINARY} revcomp.lua-2.lua 0 < /root/data/revcomp-input25000000.txt > /opt/results/${TEST_NAME}.${TLANG}.txt
 
 measure:
 	/usr/bin/time -o /opt/measures/${TLANG}.txt -v ${BINARY} revcomp.lua-2.lua 0 < /root/data/revcomp-input25000000.txt
