--- a/perl/binary-trees/Makefile
+++ b/perl/binary-trees/Makefile
@@ -1,7 +1,7 @@
 compile:
 
 run:
-	${BINARY} binarytrees.perl-3.perl 21 >> /opt/results/${TLANG}.txt
+	${BINARY} binarytrees.perl-3.perl 21 > /opt/results/${TEST_NAME}.${TLANG}.txt
 
 measure:
 	/usr/bin/time -o /opt/measures/${TLANG}.txt -v  ${BINARY} binarytrees.perl-3.perl 21
