--- a/perl/fannkuch-redux/Makefile
+++ b/perl/fannkuch-redux/Makefile
@@ -1,7 +1,7 @@
 compile:
 
 run:
-	${BINARY} fannkuchredux.perl-2.perl 12 >> /opt/results/${TLANG}.txt
+	${BINARY} fannkuchredux.perl-2.perl 12 > /opt/results/${TEST_NAME}.${TLANG}.txt
 
 measure:
 	/usr/bin/time -o /opt/measures/${TLANG}.txt -v ${BINARY} fannkuchredux.perl-2.perl 12
