--- a/perl/mandelbrot/Makefile
+++ b/perl/mandelbrot/Makefile
@@ -1,7 +1,7 @@
 compile:
 
 run:
-	${BINARY} mandelbrot.perl 16000 >> /opt/results/${TLANG}.txt
+	${BINARY} mandelbrot.perl 16000 > /opt/results/${TEST_NAME}.${TLANG}.txt
 
 measure:
 	/usr/bin/time -o /opt/measures/${TLANG}.txt -v ${BINARY} mandelbrot.perl 16000
