--- a/perl/pidigits/Makefile
+++ b/perl/pidigits/Makefile
@@ -1,7 +1,7 @@
 compile:
 
 run:
-	perl pidigits.perl-4.perl 10000 >> /opt/results/${TLANG}.txt
+	perl pidigits.perl-4.perl 10000 > /opt/results/${TEST_NAME}.${TLANG}.txt
 
 measure:
 	/usr/bin/time -o /opt/measures/${TLANG}.txt -v perl pidigits.perl-4.perl 10000
