--- a/perl/regex-redux/Makefile
+++ b/perl/regex-redux/Makefile
@@ -1,7 +1,7 @@
 compile:
 
 run:
-	${BINARY} regexredux.perl-4.perl 0 < /root/data/regexredux-input5000000.txt >> /opt/results/${TLANG}.txt
+	${BINARY} regexredux.perl-4.perl 0 < /root/data/regexredux-input5000000.txt > /opt/results/${TEST_NAME}.${TLANG}.txt
 
 measure:
 	/usr/bin/time -o /opt/measures/${TLANG}.txt -v ${BINARY} regexredux.perl-4.perl 0 < /root/data/regexredux-input5000000.txt
