--- a/perl/reverse-complement/Makefile
+++ b/perl/reverse-complement/Makefile
@@ -1,7 +1,7 @@
 compile:
 
 run:
-	${BINARY} revcomp.perl-3.perl 0 < /root/data/revcomp-input25000000.txt >> /opt/results/${TLANG}.txt
+	${BINARY} revcomp.perl-3.perl 0 < /root/data/revcomp-input25000000.txt > /opt/results/${TEST_NAME}.${TLANG}.txt
 
 measure:
 	/usr/bin/time -o /opt/measures/${TLANG}.txt -v ${BINARY} revcomp.perl-3.perl 0 < /root/data/revcomp-input25000000.txt
