--- a/perl/spectral-norm/Makefile
+++ b/perl/spectral-norm/Makefile
@@ -1,7 +1,7 @@
 compile:
 
 run:
-	${BINARY} spectralnorm.perl-4.perl 5500 >> /opt/results/${TLANG}.txt
+	${BINARY} spectralnorm.perl-4.perl 5500 > /opt/results/${TEST_NAME}.${TLANG}.txt
 
 measure:
 	/usr/bin/time -o /opt/measures/${TLANG}.txt -v  ${BINARY} spectralnorm.perl-4.perl 5500
