--- a/lua53/k-nucleotide/Makefile
+++ b/lua53/k-nucleotide/Makefile
@@ -2,7 +2,7 @@ compile:
 	echo "lua53: nothing to do"
 
 run:
-	${BINARY} knucleotide.lua-2.lua 0 < /root/data/knucleotide-input25000000.txt >> /opt/results/${TLANG}.txt
+	${BINARY} knucleotide.lua-2.lua 0 < /root/data/knucleotide-input25000000.txt > /opt/results/${TEST_NAME}.${TLANG}.txt
 
 measure:
 	/usr/bin/time -o /opt/measures/${TLANG}.txt -v ${BINARY} knucleotide.lua-2.lua 0 < /root/data/knucleotide-input25000000.txt
