--- a/luajit/binary-trees/Makefile
+++ b/luajit/binary-trees/Makefile
@@ -2,7 +2,7 @@ compile:
 	echo "luajit: nothing to do"
 
 run:
-	${BINARY} binarytrees.lua-2.lua 21 >> /opt/results/${TLANG}.txt
+	${BINARY} binarytrees.lua-2.lua 21 > /opt/results/${TEST_NAME}.${TLANG}.txt
 
 measure:
 	/usr/bin/time -o /opt/measures/${TLANG}.txt -v ${BINARY} binarytrees.lua-2.lua 21
