--- a/perl/n-body/Makefile
+++ b/perl/n-body/Makefile
@@ -1,7 +1,7 @@
 compile:
 
 run:
-	${BINARY} nbody.perl-2.perl 50000000 >> /opt/results/${TLANG}.txt
+	${BINARY} nbody.perl-2.perl 50000000 > /opt/results/${TEST_NAME}.${TLANG}.txt
 
 measure:
 	/usr/bin/time -o /opt/measures/${TLANG}.txt -v ${BINARY} nbody.perl-2.perl 50000000
