--- a/python3/k-nucleotide/Makefile
+++ b/python3/k-nucleotide/Makefile
@@ -2,7 +2,7 @@ compile:
 	echo "nothing to do"
 
 run:
-	${BINARY} -OO knucleotide.py 0 < /root/data/knucleotide-input25000000.txt >> /opt/results/${TLANG}.txt
+	${BINARY} -OO knucleotide.py 0 < /root/data/knucleotide-input25000000.txt > /opt/results/${TEST_NAME}.${TLANG}.txt
 
 measure:
 	/usr/bin/time -o /opt/measures/${TLANG}.txt -v ${BINARY} -OO knucleotide.py 0 < /root/data/knucleotide-input25000000.txt
