Added prepare command and updated target files for results and measure

--- a/python2/spectral-norm/Makefile
+++ b/python2/spectral-norm/Makefile
@@ -1,8 +1,12 @@
 compile:
 	echo "python2: nothing to compile"
 
+prepare:
+	mkdir -p /opt/results/${TLANG}
+	mkdir -p /opt/measures/${TLANG}
+
 run:
-	${BINARY} -OO spectralnorm.py 5500 > /opt/results/${TEST_NAME}.${TLANG}.txt
+	${BINARY} -OO spectralnorm.py 5500 > /opt/results/${TLANG}/${TEST_NAME}.txt
 
 measure:
-	/usr/bin/time -o /opt/measures/${TLANG}.txt -v ${BINARY} -OO spectralnorm.py 5500
+	/usr/bin/time -o /opt/measures/${TLANG}/${TEST_NAME}.txt -v ${BINARY} -OO spectralnorm.py 5500
