--- a/python2/fannkuch-redux/Makefile
+++ b/python2/fannkuch-redux/Makefile
@@ -1,8 +1,12 @@
 compile:
 	echo "python2: nothing to compile"
 
+prepare:
+	mkdir -p /opt/results/${TLANG}
+	mkdir -p /opt/measures/${TLANG}
+
 run:
-	${BINARY} -OO fannkuchredux.py 12 > /opt/results/${TEST_NAME}.${TLANG}.txt
+	${BINARY} -OO fannkuchredux.py 12 > /opt/results/${TLANG}/${TEST_NAME}.txt
 
 measure:
-	/usr/bin/time -o /opt/measures/${TLANG}.txt -v ${BINARY} -OO fannkuchredux.py 12
+	/usr/bin/time -o /opt/measures/${TLANG}/${TEST_NAME}.txt -v ${BINARY} -OO fannkuchredux.py 12
