--- a/ada/regex-redux/Makefile
+++ b/ada/regex-redux/Makefile
@@ -10,6 +10,8 @@ compile:
 	gcc -c -O3 -fomit-frame-pointer -march=native -msse3 -mfpmath=sse -gnatNp u.ads
 	gnatbind -x regexredux.ali
 	gnatlink regexredux.ali -O3 -fomit-frame-pointer -march=native -msse3 -mfpmath=sse -o regexredux.gnat-5.gnat_run
+	chmod a+x /root/${TEST_NAME}/*.gnat_run
+
 prepare:
 	mkdir -p /opt/results/${TLANG}
 	mkdir -p /opt/measures/${TLANG}
