--- a/ada/pidigits/Makefile
+++ b/ada/pidigits/Makefile
@@ -5,6 +5,8 @@ compile:
 	gcc -c -O3 -fomit-frame-pointer -march=native -msse3 -mfpmath=sse -gnatNp pidigits.adb
 	gnatbind -x pidigits.ali
 	gnatlink pidigits.ali -O3 -fomit-frame-pointer -march=native -msse3 -mfpmath=sse -o pidigits.gnat-2.gnat_run
+	chmod a+x /root/${TEST_NAME}/*.gnat_run
+
 prepare:
 	mkdir -p /opt/results/${TLANG}
 	mkdir -p /opt/measures/${TLANG}
