Partial fix to regex redux (dependency)

--- a/c/Dockerfile
+++ b/c/Dockerfile
@@ -2,5 +2,5 @@ FROM energy/base:1
 
 ENV BINARY=/usr/bin/gcc
 COPY . .
-RUN apk add gcc musl-dev apr-dev gmp-dev
+RUN apk add gcc musl-dev apr-dev gmp-dev pcre-dev
 RUN /usr/bin/python3 compile_all.py compile
