Changing binary for placeholder

--- a/csharp/chameneos-redux/Makefile
+++ b/csharp/chameneos-redux/Makefile
@@ -1,14 +1,14 @@
 compile:
 	cp chameneosredux.csharpcore Program.cs
-	/usr/bin/dotnet build -c Release
+	${BINARY} build -c Release
 
 prepare:
 	mkdir -p /opt/results/${TLANG}
 	mkdir -p /opt/measures/${TLANG}
 
 run:
-	/usr/bin/dotnet ./bin/Release/netcoreapp1.1/tmp.dll 6000000
+	${BINARY} ./bin/Release/netcoreapp1.1/tmp.dll 6000000
 
 measure:
-	/usr/bin/time -o /opt/measures/${TLANG}.txt -v /usr/bin/dotnet ./bin/Release/netcoreapp1.1/tmp.dll 6000000
+	/usr/bin/time -o /opt/measures/${TLANG}.txt -v ${BINARY} ./bin/Release/netcoreapp1.1/tmp.dll 6000000
 
