--- a/csharp/binary-trees/Makefile
+++ b/csharp/binary-trees/Makefile
@@ -1,14 +1,14 @@
 compile:
 	cp binarytrees.csharpcore-4.csharpcore Program.cs
-	/usr/bin/dotnet build -c Release
+	${BINARY} build -c Release
 
 prepare:
 	mkdir -p /opt/results/${TLANG}
 	mkdir -p /opt/measures/${TLANG}
 
 run:
-	/usr/bin/dotnet ./bin/Release/netcoreapp1.1/tmp.dll 21
+	${BINARY} ./bin/Release/netcoreapp1.1/tmp.dll 21
 
 measure:
-	/usr/bin/time -o /opt/measures/${TLANG}.txt -v  /usr/bin/dotnet ./bin/Release/netcoreapp1.1/tmp.dll 21
+	/usr/bin/time -o /opt/measures/${TLANG}.txt -v  ${BINARY} ./bin/Release/netcoreapp1.1/tmp.dll 21
 
