--- a/csharp/n-body/Makefile
+++ b/csharp/n-body/Makefile
@@ -1,14 +1,14 @@
 compile:
 	cp nbody.csharpcore-3.csharpcore Program.cs
-	/usr/bin/dotnet build -c Release
+	${BINARY} build -c Release
 
 prepare:
 	mkdir -p /opt/results/${TLANG}
 	mkdir -p /opt/measures/${TLANG}
 
 run:
-	/usr/bin/dotnet ./bin/Release/netcoreapp1.1/tmp.dll 50000000
+	${BINARY} ./bin/Release/netcoreapp1.1/tmp.dll 50000000
 
 measure:
-	/usr/bin/time -o /opt/measures/${TLANG}.txt -v  /usr/bin/dotnet ./bin/Release/netcoreapp1.1/tmp.dll 50000000
+	/usr/bin/time -o /opt/measures/${TLANG}.txt -v  ${BINARY} ./bin/Release/netcoreapp1.1/tmp.dll 50000000
 
