--- a/csharp/reverse-complement/Makefile
+++ b/csharp/reverse-complement/Makefile
@@ -1,13 +1,13 @@
 compile:
-	${BINARY} build -c Release
+	csc -o Program.cs
 
 prepare:
 	mkdir -p /opt/results/${TLANG}
 	mkdir -p /opt/measures/${TLANG}
 
 run:
-	${BINARY} ./bin/Release/netcoreapp1.1/tmp.dll 0 < /root/data/revcomp-input25000000.txt
+	${BINARY} Program.exe 0 < /root/data/revcomp-input25000000.txt
 
 measure:
-	/usr/bin/time -o /opt/measures/${TLANG}.txt -v  ${BINARY} ./bin/Release/netcoreapp1.1/tmp.dll 0 < /root/data/revcomp-input25000000.txt
+	/usr/bin/time -o /opt/measures/${TLANG}.txt -v  ${BINARY} Program.exe 0 < /root/data/revcomp-input25000000.txt
 
