--- a/csharp/thread-ring/Makefile
+++ b/csharp/thread-ring/Makefile
@@ -1,9 +1,9 @@
 compile:
-	${BINARY} build -c Release
+	csc -o Program.cs
 
 prepare:
 	mkdir -p /opt/results/${TLANG}
 	mkdir -p /opt/measures/${TLANG}
 
 run:
-	${BINARY} ./bin/Release/netcoreapp1.1/tmp.dll 50000000
+	${BINARY} Program.exe 50000000
