Pidi working; gmp added to dockerfile

--- a/csharp/Dockerfile
+++ b/csharp/Dockerfile
@@ -2,5 +2,5 @@ FROM energy/base:1
 
 ENV BINARY=/usr/bin/mono
 COPY . .
-RUN apk add -X http://dl-cdn.alpinelinux.org/alpine/edge/testing mono
+RUN apk add -X http://dl-cdn.alpinelinux.org/alpine/edge/testing mono gmp-dev
 RUN /usr/bin/python3 compile_all.py compile
