Makefile now uses compiler

--- a/go/fannkuch-redux/Makefile
+++ b/go/fannkuch-redux/Makefile
@@ -1,5 +1,5 @@
 compile:
-	/usr/bin/go build -o fannkuchredux.go_run
+	${COMPILER} build -o fannkuchredux.go_run
 
 prepare:
 	mkdir -p /opt/results/${TLANG}
