--- a/go/mandelbrot/Makefile
+++ b/go/mandelbrot/Makefile
@@ -1,5 +1,5 @@
 compile:
-	/usr/bin/go build -o mandelbrot.go-3.go_run
+	${COMPILER} build -o mandelbrot.go-3.go_run
 
 prepare:
 	mkdir -p /opt/results/${TLANG}
