--- a/go/reverse-complement/Makefile
+++ b/go/reverse-complement/Makefile
@@ -1,5 +1,5 @@
 compile:
-	/usr/bin/go build -o revcomp.go-6.go_run
+	${COMPILER} build -o revcomp.go-6.go_run
 
 prepare:
 	mkdir -p /opt/results/${TLANG}
