--- a/go/pidigits/Makefile
+++ b/go/pidigits/Makefile
@@ -1,13 +1,13 @@
 compile:
-	${COMPILER} build -o pidigits.go-3.go_run
+	CGO_ENABLED=0 ${COMPILER} build pidigits.go
 
 prepare:
 	mkdir -p /opt/results/${TLANG}
 	mkdir -p /opt/measures/${TLANG}
 
 run:
-	./pidigits.go-3.go_run 10000
+	./pidigits 10000
 
 measure:
-	/usr/bin/time -o /opt/measures/${TLANG}.txt -v ./pidigits.go-3.go_run 10000
+	/usr/bin/time -o /opt/measures/${TLANG}.txt -v ./pidigits 10000
 
