--- a/go/reverse-complement/Makefile
+++ b/go/reverse-complement/Makefile
@@ -1,13 +1,13 @@
 compile:
-	${COMPILER} build -o revcomp.go-6.go_run
+	CGO_ENABLED=0 ${COMPILER} build revcomp.go
 
 prepare:
 	mkdir -p /opt/results/${TLANG}
 	mkdir -p /opt/measures/${TLANG}
 
 run:
-	./revcomp.go-6.go_run 0 < /root/data/revcomp-input25000000.txt
+	./revcomp 0 < /root/data/revcomp-input25000000.txt
 
 measure:
-	/usr/bin/time -o /opt/measures/${TLANG}.txt -v   ./revcomp.go-6.go_run 0 < /root/data/revcomp-input25000000.txt
+	/usr/bin/time -o /opt/measures/${TLANG}.txt -v   ./revcomp 0 < /root/data/revcomp-input25000000.txt
 
