--- a/go/spectral-norm/Makefile
+++ b/go/spectral-norm/Makefile
@@ -1,13 +1,13 @@
 compile:
-	${COMPILER} build -o spectralnorm.go-4.go_run
+	CGO_ENABLED=0 ${COMPILER} build spectralnorm.go
 
 prepare:
 	mkdir -p /opt/results/${TLANG}
 	mkdir -p /opt/measures/${TLANG}
 
 run:
-	./spectralnorm.go-4.go_run 5500
+	./spectralnorm 5500
 
 measure:
-	/usr/bin/time -o /opt/measures/${TLANG}.txt -v  ./spectralnorm.go-4.go_run 5500
+	/usr/bin/time -o /opt/measures/${TLANG}.txt -v  ./spectralnorm 5500
 
