--- a/go/k-nucleotide/Makefile
+++ b/go/k-nucleotide/Makefile
@@ -1,13 +1,13 @@
 compile:
-	${COMPILER} build -o knucleotide.go-6.go_run
+	CGO_ENABLED=0 ${COMPILER} build knucleotide.go
 
 prepare:
 	mkdir -p /opt/results/${TLANG}
 	mkdir -p /opt/measures/${TLANG}
 
 run:
-	./knucleotide.go-6.go_run 0 < /root/data/knucleotide-input25000000.txt
+	./knucleotide 0 < /root/data/knucleotide-input25000000.txt
 
 measure:
-	/usr/bin/time -o /opt/measures/${TLANG}.txt -v  ./knucleotide.go-6.go_run 0 < /root/data/knucleotide-input25000000.txt
+	/usr/bin/time -o /opt/measures/${TLANG}.txt -v  ./knucleotide 0 < /root/data/knucleotide-input25000000.txt
 
