--- a/go/mandelbrot/Makefile
+++ b/go/mandelbrot/Makefile
@@ -1,13 +1,13 @@
 compile:
-	${COMPILER} build -o mandelbrot.go-3.go_run
+	CGO_ENABLED=0 ${COMPILER} build mandelbrot.go
 
 prepare:
 	mkdir -p /opt/results/${TLANG}
 	mkdir -p /opt/measures/${TLANG}
 
 run:
-	./mandelbrot.go-3.go_run 16000
+	./mandelbrot 16000
 
 measure:
-	/usr/bin/time -o /opt/measures/${TLANG}.txt -v ./mandelbrot.go-3.go_run 16000
+	/usr/bin/time -o /opt/measures/${TLANG}.txt -v ./mandelbrot 16000
 
