--- a/go/regex-redux/Makefile
+++ b/go/regex-redux/Makefile
@@ -1,13 +1,13 @@
 compile:
-	${COMPILER} build -o regexredux.go-2.go_run
+	CGO_ENABLED=0 ${COMPILER} build regexredux.go
 
 xprepare:
 	mkdir -p /opt/results/${TLANG}
 	mkdir -p /opt/measures/${TLANG}
 
 run:
-	./regexredux.go-2.go_run 0 < /root/data/regexredux-input5000000.txt
+	./regexredux 0 < /root/data/regexredux-input5000000.txt
 
 measure:
-	/usr/bin/time -o /opt/measures/${TLANG}.txt -v ./regexredux.go-2.go_run 0 < /root/data/regexredux-input5000000.txt
+	/usr/bin/time -o /opt/measures/${TLANG}.txt -v ./regexredux 0 < /root/data/regexredux-input5000000.txt
 
