regex dependencies fixed

--- a/go/Dockerfile
+++ b/go/Dockerfile
@@ -4,4 +4,5 @@ ENV COMPILER=/usr/bin/go
 
 COPY . .
 
-RUN apk add --no-cache musl-dev gmp-dev pcre-dev go
+RUN apk add --no-cache musl-dev gmp-dev pcre-dev git go
+RUN go get github.com/glenn-brown/golang-pkg-pcre/src/pkg/pcre
