results for python3 are now organized by folder

--- a/python3/pidigits/Makefile
+++ b/python3/pidigits/Makefile
@@ -6,7 +6,7 @@ prepare:
 	mkdir -p /opt/measures/${TLANG}
 
 run:
-	${BINARY} -OO pidigits.py 10000 > /opt/results/${TEST_NAME}.${TLANG}.txt
+	${BINARY} -OO pidigits.py 10000 > /opt/results/${TLANG}/${TEST_NAME}.txt
 
 measure:
 	/usr/bin/time -o /opt/measures/${TLANG}.txt -v ${BINARY} -OO pidigits.py 10000
