--- a/python3/binary-trees/Makefile
+++ b/python3/binary-trees/Makefile
@@ -6,7 +6,7 @@ prepare:
 	mkdir -p /opt/measures/${TLANG}
 
 run:
-	${BINARY} -OO binarytrees.py 21 > /opt/results/${TEST_NAME}.${TLANG}.txt
+	${BINARY} -OO binarytrees.py 21 > /opt/results/${TLANG}/${TEST_NAME}.txt
 
 measure:
 	/usr/bin/time -o /opt/measures/${TLANG}.txt -v ${BINARY} -OO binarytrees.py 21
