--- a/python3/fannkuch-redux/Makefile
+++ b/python3/fannkuch-redux/Makefile
@@ -6,7 +6,7 @@ prepare:
 	mkdir -p /opt/measures/${TLANG}
 
 run:
-	${BINARY} -OO fannkuchredux.py 12 > /opt/results/${TEST_NAME}.${TLANG}.txt
+	${BINARY} -OO fannkuchredux.py 12 > /opt/results/${TLANG}/${TEST_NAME}.txt
 
 measure:
 	/usr/bin/time -o /opt/measures/${TLANG}.txt -v ${BINARY} -OO fannkuchredux.py 12
