--- a/python3/spectral-norm/Makefile
+++ b/python3/spectral-norm/Makefile
@@ -6,7 +6,7 @@ prepare:
 	mkdir -p /opt/measures/${TLANG}
 
 run:
-	${BINARY} -OO spectralnorm.py 5500 > /opt/results/${TEST_NAME}.${TLANG}.txt
+	${BINARY} -OO spectralnorm.py 5500 > /opt/results/${TLANG}/${TEST_NAME}.txt
 
 measure:
 	/usr/bin/time -o /opt/measures/${TLANG}.txt -v ${BINARY} -OO spectralnorm.py 5500
