Force set environment to use user 1000:1000; this is not flexible, but should work for now

--- a/python3/Dockerfile
+++ b/python3/Dockerfile
@@ -5,3 +5,4 @@ ENV TLANG=python3
 
 COPY . .
 RUN apk add gmp-dev mpc1-dev mpfr-dev musl-dev gcc python3-dev py3-pip && /usr/bin/pip3 install gmpy2
+RUN chown -R 1000:1000 /root && chown -R 1000:1000 /opt
