-OO is not needed because we pre-compile

--- a/python2/k-nucleotide/Makefile
+++ b/python2/k-nucleotide/Makefile
@@ -6,7 +6,7 @@ prepare:
 	mkdir -p /opt/measures/${TLANG}
 
 run:
-	${BINARY} -OO knucleotide.py 0 < /root/data/knucleotide-input25000000.txt > /opt/results/${TLANG}/${TEST_NAME}.txt
+	${BINARY} knucleotide.py 0 < /root/data/knucleotide-input25000000.txt > /opt/results/${TLANG}/${TEST_NAME}.txt
 
 measure:
-	/usr/bin/time -o /opt/measures/${TLANG}/${TEST_NAME}.txt -v ${BINARY} -OO knucleotide.py 0 < /root/data/knucleotide-input25000000.txt
+	/usr/bin/time -o /opt/measures/${TLANG}/${TEST_NAME}.txt -v ${BINARY} knucleotide.py 0 < /root/data/knucleotide-input25000000.txt
