--- a/python2/mandelbrot/Makefile
+++ b/python2/mandelbrot/Makefile
@@ -6,7 +6,7 @@ prepare:
 	mkdir -p /opt/measures/${TLANG}
 
 run:
-	${BINARY} -OO mandelbrot.py 16000 > /opt/results/${TLANG}/${TEST_NAME}.txt
+	${BINARY} mandelbrot.py 16000 > /opt/results/${TLANG}/${TEST_NAME}.txt
 
 measure:
-	/usr/bin/time -o /opt/measures/${TLANG}/${TEST_NAME}.txt -v ${BINARY} -OO mandelbrot.py 16000
+	/usr/bin/time -o /opt/measures/${TLANG}/${TEST_NAME}.txt -v ${BINARY} mandelbrot.py 16000
