--- a/python2/binary-trees/Makefile
+++ b/python2/binary-trees/Makefile
@@ -6,7 +6,7 @@ prepare:
 	mkdir -p /opt/measures/${TLANG}
 
 run:
-	${BINARY} -OO binarytrees.py 21 > /opt/results/${TLANG}/${TEST_NAME}.txt
+	${BINARY} binarytrees.py 21 > /opt/results/${TLANG}/${TEST_NAME}.txt
 
 measure:
-	/usr/bin/time -o /opt/measures/${TLANG}/${TEST_NAME}.txt -v ${BINARY} -OO binarytrees.py 21
+	/usr/bin/time -o /opt/measures/${TLANG}/${TEST_NAME}.txt -v ${BINARY} binarytrees.py 21
