--- a/python2/fannkuch-redux/Makefile
+++ b/python2/fannkuch-redux/Makefile
@@ -6,7 +6,7 @@ prepare:
 	mkdir -p /opt/measures/${TLANG}
 
 run:
-	${BINARY} -OO fannkuchredux.py 12 > /opt/results/${TLANG}/${TEST_NAME}.txt
+	${BINARY} fannkuchredux.py 12 > /opt/results/${TLANG}/${TEST_NAME}.txt
 
 measure:
-	/usr/bin/time -o /opt/measures/${TLANG}/${TEST_NAME}.txt -v ${BINARY} -OO fannkuchredux.py 12
+	/usr/bin/time -o /opt/measures/${TLANG}/${TEST_NAME}.txt -v ${BINARY} fannkuchredux.py 12
