--- a/python2/n-body/Makefile
+++ b/python2/n-body/Makefile
@@ -6,7 +6,7 @@ prepare:
 	mkdir -p /opt/measures/${TLANG}
 
 run:
-	${BINARY} -OO nbody.py 50000000 > /opt/results/${TLANG}/${TEST_NAME}.txt
+	${BINARY} nbody.py 50000000 > /opt/results/${TLANG}/${TEST_NAME}.txt
 
 measure:
-	/usr/bin/time -o /opt/measures/${TLANG}/${TEST_NAME}.txt -v ${BINARY} -OO nbody.py 50000000
+	/usr/bin/time -o /opt/measures/${TLANG}/${TEST_NAME}.txt -v ${BINARY} nbody.py 50000000
