--- a/python2/pidigits/Makefile
+++ b/python2/pidigits/Makefile
@@ -6,7 +6,7 @@ prepare:
 	mkdir -p /opt/measures/${TLANG}
 
 run:
-	${BINARY} -OO pidigits.py 10000 > /opt/results/${TLANG}/${TEST_NAME}.txt
+	${BINARY} pidigits.py 10000 > /opt/results/${TLANG}/${TEST_NAME}.txt
 
 measure:
-	/usr/bin/time -o /opt/measures/${TLANG}/${TEST_NAME}.txt -v ${BINARY} -OO pidigits.py 10000
+	/usr/bin/time -o /opt/measures/${TLANG}/${TEST_NAME}.txt -v ${BINARY} pidigits.py 10000
