--- a/python2/spectral-norm/Makefile
+++ b/python2/spectral-norm/Makefile
@@ -6,7 +6,7 @@ prepare:
 	mkdir -p /opt/measures/${TLANG}
 
 run:
-	${BINARY} -OO spectralnorm.py 5500 > /opt/results/${TLANG}/${TEST_NAME}.txt
+	${BINARY} spectralnorm.py 5500 > /opt/results/${TLANG}/${TEST_NAME}.txt
 
 measure:
-	/usr/bin/time -o /opt/measures/${TLANG}/${TEST_NAME}.txt -v ${BINARY} -OO spectralnorm.py 5500
+	/usr/bin/time -o /opt/measures/${TLANG}/${TEST_NAME}.txt -v ${BINARY} spectralnorm.py 5500
