--- a/ada/k-nucleotide/Makefile
+++ b/ada/k-nucleotide/Makefile
@@ -14,7 +14,7 @@ prepare:
 	mkdir -p /opt/measures/${TLANG}
 
 run:
-	./knucleotide.gnat-2.gnat_run 0 < /root/data/knucleotide-input25000000.txt
+	./knucleotide.gnat-2.gnat_run 0 < /root/data/knucleotide-input25000000.txt > /opt/results/${TLANG}/${TEST_NAME}.txt
 
 measure:
 	/usr/bin/time -o /opt/measures/${TLANG}.txt -v ./knucleotide.gnat-2.gnat_run 0 < /root/data/knucleotide-input25000000.txt
