--- a/ada/regex-redux/Makefile
+++ b/ada/regex-redux/Makefile
@@ -17,7 +17,7 @@ prepare:
 	mkdir -p /opt/measures/${TLANG}
 
 run:
-	./regexredux.gnat-5.gnat_run 0 < /root/data/regexredux-input5000000.txt
+	./regexredux.gnat-5.gnat_run 0 < /root/data/regexredux-input5000000.txt > /opt/results/${TLANG}/${TEST_NAME}.txt
 
 measure:
 	/usr/bin/time -o /opt/measures/${TLANG}.txt -v ./regexredux.gnat-5.gnat_run 0 < /root/data/regexredux-input5000000.txt
