--- a/ada/n-body/Makefile
+++ b/ada/n-body/Makefile
@@ -14,7 +14,7 @@ prepare:
 	mkdir -p /opt/measures/${TLANG}
 
 run:
-	./nbody.gnat-2.gnat_run 50000000
+	./nbody.gnat-2.gnat_run 50000000 > /opt/results/${TLANG}/${TEST_NAME}.txt
 
 measure:
 	/usr/bin/time -o /opt/measures/${TLANG}.txt -v ./nbody.gnat-2.gnat_run 50000000
