--- a/c/spectral-norm/Makefile
+++ b/c/spectral-norm/Makefile
@@ -1,11 +1,12 @@
 compile:
 	/usr/bin/gcc -pipe -Wall -O3 -fomit-frame-pointer -march=native -fopenmp -mfpmath=sse -msse2 spectralnorm.gcc-4.c -o spectralnorm.gcc-4.gcc_run -lm
+
 prepare:
 	mkdir -p /opt/results/${TLANG}
 	mkdir -p /opt/measures/${TLANG}
 
 run:
-	./spectralnorm.gcc-4.gcc_run 5500
+	./spectralnorm.gcc-4.gcc_run 5500 > /opt/results/${TLANG}/${TEST_NAME}.txt
 
 measure:
 	/usr/bin/time -o /opt/measures/${TLANG}.txt -v ./spectralnorm.gcc-4.gcc_run 5500
